src/snapshots/blog__snapshot@inside-rust__2024__09__06__leadership-council-update.html.snap
---
source: src/lib.rs
expression: content
input_file: site/inside-rust/2024/09/06/leadership-council-update.html
snapshot_kind: text
---
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>September 2024 Leadership Council Update | Inside Rust Blog</title>
    <meta name="viewport" content="width=device-width,initial-scale=1.0">
<meta name="description" content="Empowering everyone to build reliable and efficient software.">
     <!-- Twitter card -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@rustlang">
     <meta name="twitter:creator" content="@rustlang">
     <meta name="twitter:title" content="September 2024 Leadership Council Update | Inside Rust Blog">
     <meta name="twitter:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta name="twitter:image" content="https://www.rust-lang.org/static/images/rust-social.jpg">
    
    <!-- Facebook OpenGraph -->
    <meta property="og:title" content="September 2024 Leadership Council Update | Inside Rust Blog" />
    <meta property="og:description" content="Want to follow along with Rust development? Curious how you might get involved? Take a look!">
    <meta property="og:image" content="https://www.rust-lang.org/static/images/rust-social-wide.jpg" />
    <meta property="og:type" content="website" />
    <meta property="og:locale" content="en_US" />
    
    <!-- styles -->
    <link rel="stylesheet" href="../../../../styles/vendor.css"/>
    <link rel="stylesheet" href="../../../../styles/fonts.css"/>
    <link rel="stylesheet" href="../../../../styles/app.css"/>
    <link rel="stylesheet" href="../../../../styles/highlight.css"/>
    
    <!-- stylesheet for user agents without js -->
    <noscript>
        <link rel="stylesheet" href="../../../../styles/noscript.css">
    </noscript>
    
    <!-- favicon -->
    <link rel="apple-touch-icon" sizes="180x180" href="../../../../images/apple-touch-icon.png">
    <link rel="icon" type="image/png" sizes="16x16" href="../../../../images/favicon-16x16.png">
    <link rel="icon" type="image/png" sizes="32x32" href="../../../../images/favicon-32x32.png">
    <link rel="icon" type="image/svg+xml" href="../../../../images/favicon.svg">
    <link rel="manifest" href="../../../../images/site.webmanifest">
    <link rel="mask-icon" href="../../../../images/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#00aba9">
    <meta name="theme-color" content="#ffffff">
    
     <!-- atom -->
     <link type="application/atom+xml" rel="alternate" href="https://blog.rust-lang.org/inside-rust/feed.xml" title="Inside Rust Blog" />
    
    <!-- theme switcher -->
    <script src="../../../../scripts/theme-switch.js"></script>
  </head>
  <body>
    <nav class="flex flex-row justify-center justify-end-l items-center flex-wrap ph2 pl3-ns pr4-ns">
      <div class="brand flex-auto w-100 w-auto-l self-start tc tl-l">
        <a href="../../../../inside-rust/">
          <img class="v-mid ml0-l rust-logo" alt="Rust Logo" src="../../../../images/rust-logo-blk.svg">
          <span class="dib ml1 ml0-l">Inside Rust Blog</span>
        </a>
      </div>
    
      <ul class="nav list w-100 w-auto-l flex flex-none flex-row flex-wrap justify-center justify-end-l items-center pv2 ph0 ph4-ns">
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org">Rust</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools/install">Install</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/learn">Learn</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/tools">Tools</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/governance">Governance</a></li>
        <li class="tc pv2 ph2 ph4-ns flex-20-s"><a href="https://www.rust-lang.org/community">Community</a></li>
        <button class="theme-icon" onclick="dropdown();">🖌
          <ul id="theme-choice">
            <li class="theme-item" onclick="changeThemeTo('light');">Light</li>
            <li class="theme-item" onclick="changeThemeTo('dark');">Dark</li>
            <li class="theme-item" onclick="changeThemeTo('system');">System</li>
          </ul>
        </button>
        <script src="../../../../scripts/theme-switch-post.js"></script>
      </ul>
    </nav>
<section id="September 2024 Leadership Council Update" class="white">
  <div class="w-100 mw-none ph3 mw8-m mw8-l center f3">
    <header>
      <h2>September 2024 Leadership Council Update</h2>
      <div class="highlight mt2 mb3"></div>
    </header>

    <div class="publish-date-author">Sept. 6, 2024 &middot; Eric Huss
     on behalf of <a href="https://www.rust-lang.org/governance/teams/leadership-council">Leadership Council</a> 
    </div>

    <div class="post">
      <p>Hello again from the Rust Leadership Council!
We wanted to share an update on what the Council has been working on since <a href="https://blog.rust-lang.org/inside-rust/2024/05/14/leadership-council-update.html">our last update</a>.</p>
<h2><a href="#accomplishments-so-far" aria-hidden="true" class="anchor" id="accomplishments-so-far"></a>Accomplishments so far</h2>
<h3><a href="#welcome-james-munns-to-the-council" aria-hidden="true" class="anchor" id="welcome-james-munns-to-the-council"></a>Welcome James Munns to the Council</h3>
<p>As <a href="https://blog.rust-lang.org/inside-rust/2024/05/28/launching-pad-representative.html">announced in May</a>, James Munns joined the Council representing the Launching Pad.</p>
<h3><a href="#all-hands-and-10-year-anniversary" aria-hidden="true" class="anchor" id="all-hands-and-10-year-anniversary"></a>All-hands and 10-year anniversary</h3>
<p>We have been coordinating with <a href="https://rustnl.org/">RustNL</a> for hosting an all-hands event for all Rust project members. We will also be celebrating Rust's 10-year anniversary at RustWeek 2025.</p>
<p>Part of this coordination has involved ensuring we are capable of handling the travel expenses, and reserving funds for the event itself if needed.</p>
<h3><a href="#rustconf-2024" aria-hidden="true" class="anchor" id="rustconf-2024"></a>RustConf 2024</h3>
<p>We have continued to coordinate with planning for <a href="https://rustconf.com/">RustConf</a>. James Munns and Jack Huey will be giving a keynote talk called &quot;An Outsider's Guide to the Rust Project&quot;, which will focus on the teams and structure that make up the Rust Project today, how the teams communicate and make collaborative decisions, and how new people and groups can get involved.</p>
<h3><a href="#ubuntu-summit-2024" aria-hidden="true" class="anchor" id="ubuntu-summit-2024"></a>Ubuntu Summit 2024</h3>
<p>We coordinated with <a href="https://events.canonical.com/event/51/">Ubuntu Summit</a> for representing the Rust project. Eric Holk has volunteered to give a talk at the event.</p>
<h3><a href="#leadership-council-survey" aria-hidden="true" class="anchor" id="leadership-council-survey"></a>Leadership Council survey</h3>
<p>We performed a survey for Rust project members to provide feedback on the effectiveness of the Council. A summary of the results was published at <a href="https://blog.rust-lang.org/2024/08/26/council-survey.html">https://blog.rust-lang.org/2024/08/26/council-survey.html</a>.</p>
<h3><a href="#foundation-fellowship-grants" aria-hidden="true" class="anchor" id="foundation-fellowship-grants"></a>Foundation fellowship grants</h3>
<p>We coordinated with the Foundation for reviewing applications for the <a href="https://foundation.rust-lang.org/grants/fellowships/">2024 Fellowship Program</a>. Information should currently be going out to the awardees, and more will be announced soon.</p>
<h3><a href="#additional-items" aria-hidden="true" class="anchor" id="additional-items"></a>Additional items</h3>
<p>And a few other items:</p>
<ul>
<li>Coordinated with ACM SIGPLAN for receiving the <a href="https://www.sigplan.org/Awards/Software/">Programming Languages Software Award</a>.</li>
<li>Approved to have Rust included in <a href="https://blog.discourse.org/2024/08/celebrating-a-decade-of-discourse/">Discourse's 10-year anniversary post</a>.</li>
<li>Coordinated with the <a href="https://github.com/rust-lang/rust/pull/125419">gcc licensing approval</a>. We are still interested in establishing a better process for managing license work (<a href="https://github.com/rust-lang/leadership-council/issues/24">leadership-council#24</a>), but have not had the capacity to make progress.</li>
<li>Coordinated with the <a href="https://github.com/rust-lang/team/pull/1489">archival of the WASM working group</a>.</li>
<li>Started the <a href="https://blog.rust-lang.org/inside-rust/2024/09/06/electing-new-project-directors.html">Project Director elections</a>.</li>
<li>Started the <a href="https://blog.rust-lang.org/inside-rust/2024/08/20/leadership-council-repr-selection.html">September Council member selections</a>.</li>
<li>Added more details about Project Director requirements (<a href="https://github.com/rust-lang/leadership-council/pull/86">https://github.com/rust-lang/leadership-council/pull/86</a>).</li>
<li>Approved an update to streamline the travel grant process.</li>
<li>Procedural changes related to the Council itself:
<ul>
<li>Started a <a href="https://github.com/orgs/rust-lang/projects/55/views/1">project board</a> for tracking and reviewing Council tasks.</li>
<li>Improved meeting minutes publishing turnaround by approving the minutes synchronously.</li>
<li>Updated the policy to add guidelines for sharing from meeting observers (<a href="https://github.com/rust-lang/leadership-council/pull/88">https://github.com/rust-lang/leadership-council/pull/88</a>).</li>
</ul>
</li>
</ul>
<h2><a href="#ongoing-work" aria-hidden="true" class="anchor" id="ongoing-work"></a>Ongoing work</h2>
<p>There are various efforts underway on projects that have had significant discussions since the last update, but have not concluded with any decisions, yet.
They are:</p>
<h3><a href="#foundation-budget" aria-hidden="true" class="anchor" id="foundation-budget"></a>Foundation budget</h3>
<p>The Foundation has provided a budget to the Council to spend on the Project. We have had numerous discussions about how to spend that budget. We have already approved a process for support travel grants from project members, and continue to refine that process and policy. We have also approved to reserve some funds for the Rust all-hands event next year.</p>
<p>Discussions are still ongoing about other things to consider funding. Additionally, we don't have a shared bookkeeping system with the Foundation, and we intend to find some way to better track our spending.</p>
<h3><a href="#shape-of-rust" aria-hidden="true" class="anchor" id="shape-of-rust"></a>Shape of Rust</h3>
<p>We have been looking more closely at what to do with the <a href="https://forge.rust-lang.org/governance/council.html#the-launching-pad-top-level-team">Launching Pad</a>. A short-term proposal has been put forward to start moving some of the active groups into more permanent positions within the Project.</p>
<p>We are also looking at sunsetting the concept of &quot;working groups&quot;. Some working groups may be renamed to be normal teams, or some may be retired if they are not active. These are just initial ideas to consider, discussions are still ongoing.</p>
<p>We have had more discussions about what it means to be a &quot;member&quot; of the Rust Project. At the heart of this discussion is whether or not we consider working group members to be members of the Project. Historically we have used the <code>all@rust-lang.org</code> email alias for tracking members, but that alias excludes working group members.</p>
<h3><a href="#additional-items-1" aria-hidden="true" class="anchor" id="additional-items-1"></a>Additional items</h3>
<ul>
<li>Continued discussions about clarifying the <a href="https://github.com/rust-lang/leadership-council/issues/66">Project Director employment constraints</a>.</li>
<li>Helping with communication regarding the regression that happened in Rust 1.80 (<a href="https://github.com/rust-lang/rust/issues/127343">https://github.com/rust-lang/rust/issues/127343</a>).</li>
<li>Discussions have been ongoing regarding the Rust trademark policy.</li>
</ul>
<h2><a href="#meeting-minutes" aria-hidden="true" class="anchor" id="meeting-minutes"></a>Meeting minutes</h2>
<p>We publish minutes from all Council meetings to the <a href="https://github.com/rust-lang/leadership-council/tree/main/minutes">Leadership Council repo</a>.
Links to the minutes since our last update are:</p>
<ul>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-04-12.md">April 12, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-05-24.md">May 24, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-06-07.md">June 7, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-06-21.md">June 21, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-07-05.md">July 5, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-07-19.md">July 19, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-08-02.md">August 2, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-08-16.md">August 16, 2024</a></li>
<li><a href="https://github.com/rust-lang/leadership-council/blob/main/minutes/sync-meeting/2024-08-30.md">August 30, 2024</a></li>
</ul>

    </div>
  </div>
</section>
    <footer>
      <div class="w-100 mw-none ph3 mw8-m mw9-l center f3">
        <div class="row">
          <div class="four columns mt3 mt0-l" id="get-help">
            <h4>Get help!</h4>
            <ul>
              <li><a href="https://doc.rust-lang.org" target="_blank" rel="noopener">Documentation</a></li>
              <li><a href="mailto:core-team@rust-lang.org">Contact the Rust Team</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Terms and policies</h4>
            <ul>
              <li><a href="https://www.rust-lang.org/policies/code-of-conduct">Code of Conduct</a></li>
              <li><a href="https://www.rust-lang.org/policies/licenses">Licenses</a></li>
              <li><a href="https://www.rust-lang.org/policies/media-guide">Logo Policy and Media Guide</a></li>
              <li><a href="https://www.rust-lang.org/policies/security">Security Disclosures</a></li>
              <li><a href="https://www.rust-lang.org/policies">All Policies</a></li>
            </ul>
          </div>
          <div class="four columns mt3 mt0-l">
            <h4>Social</h4>
            <div class="flex flex-row flex-wrap">
              <a rel="me" href="https://social.rust-lang.org/@rust" target="_blank" rel="noopener" alt="mastodon link"><img src="../../../../images/mastodon.svg" alt="mastodon logo" title="Mastodon"/></a>
              <a href="https://twitter.com/rustlang" target="_blank" rel="noopener" alt="twitter link"><img src="../../../../images/twitter.svg" alt="twitter logo" title="Twitter"/></a>
              <a href="https://www.youtube.com/channel/UCaYhcUwRBNscFNUKTjgPFiA" target="_blank" rel="noopener" alt="youtube link"><img style="padding-top: 6px; padding-bottom:6px" src="../../../../images/youtube.svg" alt="youtube logo" title="YouTube"/></a>
              <a href="https://discord.gg/rust-lang" target="_blank" rel="noopener" alt="discord link"><img src="../../../../images/discord.svg" alt="discord logo" title="Discord"/></a>
              <a href="https://github.com/rust-lang" target="_blank" rel="noopener" alt="github link"><img src="../../../../images/github.svg" alt="github logo" title="GitHub"/></a>
            </div>
            <h4 class="mt4 mb3">RSS</h4>
            <ul>
              <li><a href="../../../../feed.xml">Main Blog</a></li>
              <li><a href="../../../../inside-rust/feed.xml">"Inside Rust" Blog</a></li>
            </ul>
          </div>
    
        </div>
        <div class="attribution">
          Maintained by the Rust Team. See a typo?
          <a href="https://github.com/rust-lang/blog.rust-lang.org" target="_blank" rel="noopener">Send a fix here</a>!
        </div>
      </div>
    </footer>
    
    <!-- scripts -->
    <script src="../../../../scripts/highlight.js"></script>
  </body>
</html>
